--- a/.env
+++ b/.env
@@ -30,3 +30,8 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:15432/app?serverVersion=13
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+S3_KEY=
+S3_SECRET=
+S3_BUCKET=
+S3_REGION=
+S3_ENDPOINT=
