--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3'
 
 services:
+  app:
+    image: 'decima/pam:latest'
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - .env.local
+    environment:
+      - DATABASE_URL=postgresql://symfony:ChangeMe@database:5432/app?serverVersion=13&charset=utf8
+    ports:
+      - '18000:8000'
+    volumes:
+      - './demo/import:/import'
+      - './demo/data:/data'
 ###> doctrine/doctrine-bundle ###
   database:
     image: postgres:${POSTGRES_VERSION:-13}-alpine
